# youtube-unsubscribe-all-mcp

./: .gitignore  AGENTS.md  README.md  README.ru.md  channels.txt  pyproject.toml  test_copy3.bat  unsub_all.bat  unsub_all_minimized.vbs
yt_feed/: cli.py  feed.py  mcp_server.py  unsub.py
