[project]
name = "yt-feed"
version = "0.1.0"
description = "YouTube tools: fetch subscriptions feed & unsubscribe from all channels"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "requests>=2.28.0",
    "playwright>=1.40.0",
    "mcp>=1.0.0",
]

[project.scripts]
yt-feed = "yt_feed.cli:main"
yt-feed-mcp = "yt_feed.mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
